extra-sagami: dolby: Switch back to Moto's Blobs
* We've switched to Moto's because the AC Decoders did not work with the OP7P blobs, so apps that support Spatial Audio like Apple Music did not detect that the device supports Dolby Atmos

* Uprevved "vendor.dolby.hardware.dms" Compatibility Matrix Version to 5.0

* Updated the SEPolicy in accordance with the new blobs (Reverted to Moto's 3.6 SEPolicy)

Signed-off-by: saku-bruh <notwolfyy@gmail.com>

--- a/extra/dolby/configs/dax/audio/audio_effects.conf
+++ b/extra/dolby/configs/dax/audio/audio_effects.conf
@@ -6,6 +6,15 @@
 #        }
 #    }
 libraries {
+  gamedap {
+    path /vendor/lib/soundfx/libswgamedap.so
+  }
+  vqe {
+    path /vendor/lib/soundfx/libswvqe.so
+  }
+  dap {
+    path /vendor/lib/soundfx/libswdap.so
+  }
   bundle {
     path /vendor/lib/soundfx/libbundlewrapper.so
   }
@@ -76,6 +85,18 @@ libraries {
 #    }
 
 effects {
+  gamedap {
+    library gamedap
+    uuid 3783c334-d3a0-4d13-874f-0032e5fb80e2
+  }
+  vqe {
+    library vqe
+    uuid 64a0f614-7fa4-48b8-b081-d59dc954616f
+  }
+  dap {
+    library dap
+    uuid 9d4921da-8225-4f29-aefa-39537a04bcaa
+  }
 
 # additions for the proxy implementation
 # Proxy implementation
@@ -269,26 +290,23 @@ effects {
 # UUID generated using version 1
 
 output_session_processing {
+    system {
+    }
     music {
-        music_helper {
-        }
+
     }
     ring {
-        ring_helper {
-        }
+
     }
     alarm {
-        alarm_helper {
-        }
+
     }
     # stream type voice_call is used for VoIP call
     voice_call {
-        voice_helper {
-        }
+
     }
     notification {
-        notification_helper {
-        }
+
     }
 }
 
